--- a/src/app/components/maps/maps.component.css
+++ b/src/app/components/maps/maps.component.css
@@ -104,3 +104,8 @@
   text-align: center;
   display: inline-block;
 }
+
+.dx-texteditor.dx-editor-outlined {
+  background-color: var(--bs-body-bg);
+  border: var(--bs-border-width) solid var(--bs-border-color);
+}
